# oryjin-deploy-private

./: .github-redact.yml  .gitignore  README.md  launch.sh  pyproject.toml  requirements_no_versions.txt  requirements_no_versions_dev_only.txt  secrets-to-remove.txt  test-prompt.txt
.devcontainer/: devcontainer.json
app/client/oryjin-client/: connection.sh  main.py  pyproject.toml  snowflake.yml
app/client/oryjin-client/app/: setup_script.sql
app/client/oryjin-client/streamlit/: client copy.py  client.py  client2.py  dsp_page.py  environment.yml  langgraphclient_example.py  main_page.py  requirements.txt  streamlit_app.py  test_client.py
app/core/studio/: clustering.py  docker-compose.yml  docker-setup  image.py  langgraph.json  main.py  requirements.txt
app/core/studio/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
app/core/studio/agent/: client.py  graph.py  graph2.py  image.py  main.py  main_chainlit.py  models.py  prompts.py  test.py  utils.py
app/demo/: prompts.txt  pyproject.toml
app/demo/studio/: research_assistant.py
app/demo/studio/.langgraph_api/: .langgraph_ops.pckl
docs/: CONTRIBUTING.md  FEATURE_AND_MOCKING.md  MOCKING.md  ROADMAP.md
docs/ADR/: 000-processus-adr.md  001-language-strategy.md  002-python-choice.md  003-framework-and-tooling-selection.md
docs/prompts/: 001-system-prompt.md
notebooks/: api.ipynb  api_advanced.ipynb  main_graph.ipynb  snowflake.ipynb
