[project]
name = "oryjin-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-storage-blob>=12.26.0",
    "chainlit>=2.6.2",
    "google-cloud-storage>=3.1.1",
    "langchain>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-mistralai>=0.2.10",
    "langgraph>=0.4.8",
    "openai>=1.88.0",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.7.0",
    "snowflake-connector-python[pandas]>=3.15.0",
    "trustcall>=0.0.39",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "langgraph-cli[inmem]>=0.3.3",
]
